syntax = "proto3";

option java_package = "org.sorapointa.proto";

import "UnionCmd.proto";

// CmdId: 98
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message UnionCmdNotify {
	repeated UnionCmd cmd_list = 13;
}
